--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <main>
         <section id="home">
             <h2>Selamat Datang di Virtual Lab Matematika IA</h2>
+            <p>Virtual Lab Matematika IA dibuat untuk membantu mahasiswa dalam mempelajari dan memvisualisasi beberapa materi yang bersifat
+              aplikatif untuk pembelajaran kuliah. Materi dapat dilihat pada Edunex kelas masing-masing.
+            </p>
             <p>Pelajari konsep matematika dengan alat bantu interaktif.</p>
         </section>
 
@@ -73,6 +76,14 @@
 
     <footer>
         <p>&copy; 2024 Virtual Lab Matematika IA</p>
+    </footer>
+
+    <footer>
+      <p>Media Pembelajaran Interaktif Berupa Virtual Lab Berbasis Web</p>
+    </footer>
+
+    <footer>
+      <p>Dibuat oleh Kezia Caren Cahyadi - 18222041</p>
     </footer>
 
     <script src="js/script.js"></script>
