update logo, html, dan style

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+  <div class="logo-container">
+    <img src="Assets/logo-itb.png" alt="Logo ITB" class="logo-itb">
+    <span class="nama-ITB">Institut Teknologi Bandung</span>
+    <img src="Assets/kampus-merdeka.png" alt="Logo Kampus Merdeka" class="kampus-merdeka">
+  </div>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Virtual Lab Matematika IA</title>
     <link rel="stylesheet" href="css/style.css">
-    <!-- Plotly.js untuk grafik -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <!-- Math.js untuk kalkulasi matematis -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/9.4.4/math.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -29,7 +32,6 @@
             <p>Virtual Lab Matematika IA dibuat untuk membantu mahasiswa dalam mempelajari dan memvisualisasi beberapa materi yang bersifat
               aplikatif untuk pembelajaran kuliah. Materi dapat dilihat pada Edunex kelas masing-masing.
             </p>
-            <p>Pelajari konsep matematika dengan alat bantu interaktif.</p>
         </section>
 
         <!-- Kalkulator Turunan -->
