--- a/index.html
+++ b/index.html
@@ -88,6 +88,6 @@
       <p>Dibuat oleh Kezia Caren Cahyadi - 18222041</p>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="JS/script.js"></script>
 </body>
 </html>
