modify css js html

--- a/index.html
+++ b/index.html
@@ -88,6 +88,19 @@
       <p>Dibuat oleh Kezia Caren Cahyadi - 18222041</p>
     </footer>
 
+    <section id="login">
+      <h2>Login</h2>
+      <input type="email" id="email" placeholder="Masukkan email">
+      <input type="password" id="password" placeholder="Masukkan password">
+      <button onclick="login()">Login</button>
+    </section>
+
+    <section id="progress">
+      <h2>Progress Anda</h2>
+      <ul id="userProgress"></ul>
+      <button onclick="logout()">Logout</button>
+    </section>
+
     <script src="JS/script.js"></script>
 </body>
 </html>
